Много чего сделал

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,157 +5,196 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!--Шапка компании-->
     <header>
       <nav>
-        <a href="index.html" lang="en" class="logo">WebStudio</a>
-        <ul>
-          <li><a href="index.html">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <a class="logo-link link-dec" lang="en" href="./index.html"
+          >Web<span class="header-link">Studio</span></a
+        >
+        <ul class="list">
+          <li><a class="nav-link link-dec" href="index.html">Студия</a></li>
+          <li>
+            <a class="nav-link link-dec" href="portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="nav-link link-dec" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="list">
+        <li>
+          <a class="contact-header-link link-dec" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li>
+          <a
+            class="contact-header-link link-dec"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
       </ul>
     </header>
     <!-- Уникальный контент -->
     <main>
       <!-- Галерея -->
-      <section>
-        <h1>Галерея работ</h1>
-        <ul>
+      <section class="gallery">
+        <h1 class="hiden-header">Галерея работ</h1>
+        <ul class="list">
           <li>
-            <button type="button">Все</button>
+            <button class="gallery-button" type="button">Все</button>
           </li>
           <li>
-            <button type="button">Веб-сайты</button>
+            <button class="gallery-button" type="button">Веб-сайты</button>
           </li>
           <li>
-            <button type="button">Приложения</button>
+            <button class="gallery-button" type="button">Приложения</button>
           </li>
           <li>
-            <button type="button">Дизайн</button>
+            <button class="gallery-button" type="button">Дизайн</button>
           </li>
           <li>
-            <button type="button">Маркетинг</button>
+            <button class="gallery-button" type="button">Маркетинг</button>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-1.jpg"
               alt="Ноутбул с открытым сайтом"
               width="370"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="gallery-header">Технокряк</h2>
+            <p class="gallery-type">Веб-сайт</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-2.jpg"
               alt="Два баскетболиста играют"
               width="370"
             />
-            <h2>Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-            <p>Дизайн</p>
+            <h2 class="gallery-header">
+              Постер <span lang="en">New Orlean vs Golden Star</span>
+            </h2>
+            <p class="gallery-type">Дизайн</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-3.jpg"
               alt="Ресторан с морепродуктами"
               width="370"
             />
-            <h2>Ресторан <span lang="en">Seafood</span></h2>
-            <p>Приложение</p>
+            <h2 class="gallery-header">
+              Ресторан <span lang="en">Seafood</span>
+            </h2>
+            <p class="gallery-type">Приложение</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-4.jpg"
               alt="Наушники"
               width="370"
             />
-            <h2>Проект <span lang="en">Prime</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="gallery-header">Проект <span lang="en">Prime</span></h2>
+            <p class="gallery-type">Маркетинг</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-5.jpg"
               alt="Две коробки"
               width="370"
             />
-            <h2>Проект <span lang="en">Boxes</span></h2>
-            <p>Приложение</p>
+            <h2 class="gallery-header">Проект <span lang="en">Boxes</span></h2>
+            <p class="gallery-type">Приложение</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-6.jpg"
               alt="Монитор"
               width="370"
             />
             <h2 lang="en">Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <p class="gallery-type">Веб-сайт</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-7.jpg"
               alt="Книга"
               width="370"
             />
-            <h2>Издание <span lang="en">Limited Edition</span></h2>
-            <p>Дизайн</p>
+            <h2 class="gallery-header">
+              Издание <span lang="en">Limited Edition</span>
+            </h2>
+            <p class="gallery-type">Дизайн</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-8.jpg"
               alt="Бирка"
               width="370"
             />
-            <h2>Проект <span lang="en">LAB</span></h2>
-            <p>Маркетинг</p>
+            <h2 class="gallery-header">Проект <span lang="en">LAB</span></h2>
+            <p class="gallery-type">Маркетинг</p>
           </li>
           <li>
-            <a href=""></a>
+            <a class="link-dec" href=""></a>
             <img
               src="./images/portfolio/project-9.jpg"
               alt="Человек за ноутбуком"
               width="370"
             />
-            <h2 lang="en">Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="gallery-header" lang="en">Growing Business</h2>
+            <p class="gallery-type">Приложение</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Футер-->
-    <footer>
-      <a class="logo-link" lang="en" href="./index.html"
+    <footer class="footer">
+      <a class="logo-link link-dec" lang="en" href="./index.html"
         >Web<span class="footer-link">Studio</span></a
       >
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
+              class="location-link link-dec"
               href="https://goo.gl/maps/CiyNuwv28CsmYzVaA"
               target="_blank"
               rel="noopener noreferrer"
             >
               г. Киев, пр-т Леси Украинки, 26</a
             >
+            >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li>
+            <a
+              class="contact-footer-link link-dec"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="contact-footer-link link-dec" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
+          </li>
         </ul>
       </address>
     </footer>
