--- a/index.html
+++ b/index.html
@@ -17,63 +17,75 @@
     <!--Шапка компании-->
     <header>
       <nav>
-        <a class="logo-link" lang="en" href="./index.html"
+        <a class="logo-link link-dec" lang="en" href="./index.html"
           >Web<span class="header-link">Studio</span></a
         >
-        <ul>
-          <li><a href="index.html">Студия</a></li>
-          <li><a href="portfolio.html">Портфолио</a></li>
-          <li><a href="">Контакты</a></li>
+        <ul class="list">
+          <li><a class="nav-link link-dec" href="index.html">Студия</a></li>
+          <li>
+            <a class="nav-link link-dec" href="portfolio.html">Портфолио</a>
+          </li>
+          <li><a class="nav-link link-dec" href="">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+      <ul class="list">
+        <li>
+          <a class="contact-header-link link-dec" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
+        </li>
+        <li>
+          <a
+            class="contact-header-link link-dec"
+            href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
+        </li>
       </ul>
     </header>
     <!--Секция Герой-->
     <main>
       <div>
-        <section>
-          <h1>Эффективные решения для вашего бизнеса</h1>
-          <button type="button">Заказать услугу</button>
+        <section class="hero">
+          <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-button" type="button">Заказать услугу</button>
         </section>
       </div>
       <!--Скрыть заголовок в CSS -->
-      <h2>Наши особенности</h2>
-      <!--Секция "особенности"-->
+      <h2 class="hiden-header">Наши особенности</h2>
+      <!--Секция "Особенности"-->
       <section>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
-            <p>
+            <h3 class="feature-header">ВНИМАНИЕ К ДЕТАЛЯМ</h3>
+            <p class="feature-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>ПУНКТУАЛЬНОСТЬ</h3>
-            <p>
+            <h3 class="feature-header">ПУНКТУАЛЬНОСТЬ</h3>
+            <p class="feature-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>ПЛАНИРОВАНИЕ</h3>
-            <p>
+            <h3 class="feature-header">ПЛАНИРОВАНИЕ</h3>
+            <p class="feature-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
         </ul>
-        <ul>
+        <ul class="list">
           <li>
-            <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
-            <p>
+            <h3 class="feature-header">СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+            <p class="feature-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -82,8 +94,8 @@
       </section>
       <!--Секция "чем мы занимаемся"-->
       <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
+        <h2 class="header">Чем мы занимаемся</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/main/box-1.jpg"
@@ -108,58 +120,60 @@
         </ul>
       </section>
       <!--Секция "Наша команда"-->
-      <section>
-        <ul>
-          <li>
+      <section class="team">
+        <h2 class="header">Наша команда</h2>
+        <ul class="list">
+          <li class="team-card">
             <img src="./images//main/person-1.jpg" alt="Дизайнер" width="270" />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-name">Игорь Демьяненко</h3>
+            <p class="team-position" lang="en">Product Designer</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="team-card">
             <img
               src="./images//main/person-2.jpg"
               alt="Разработчик"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-name">Ольга Репина</h3>
+            <p class="team-position" lang="en">Frontend Developer</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="team-card">
             <img
               src="./images//main/person-3.jpg"
               alt="Маркетолог"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-name">Николай Тарасов</h3>
+            <p class="team-position" lang="en">Marketing</p>
           </li>
         </ul>
-        <ul>
-          <li>
+        <ul class="list">
+          <li class="team-card">
             <img
               src="./images//main/person-4.jpg"
               alt="UI Designer"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-name">Михаил Ермаков</h3>
+            <p class="team-position" lang="en">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!--Подвал-->
-    <footer>
-      <a class="logo-link" lang="en" href="./index.html"
+    <footer class="footer">
+      <a class="logo-link link-dec" lang="en" href="./index.html"
         >Web<span class="footer-link">Studio</span></a
       >
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a
+              class="location-link link-dec"
               href="https://goo.gl/maps/CiyNuwv28CsmYzVaA"
               target="_blank"
               rel="noopener noreferrer"
@@ -169,10 +183,16 @@
             >
           </li>
           <li>
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a
+              class="contact-footer-link link-dec"
+              href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
           </li>
           <li>
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="contact-footer-link link-dec" href="tel:+380961111111"
+              >+38 096 111 11 11</a
+            >
           </li>
         </ul>
       </address>
